@@ -221,4 +221,7 @@ extern void   pdf_dev_get_coord(double *xpos, double *ypos);
 extern void   pdf_dev_push_coord(double xpos, double ypos);
 extern void   pdf_dev_pop_coord(void);
 
+extern void   pdf_dev_begin_actualtext (uint16_t *unicodes, int len);
+extern void   pdf_dev_end_actualtext ();
+
 #endif /* _PDFDEV_H_ */
